Bug fixes, clean up and crafting engine V8